# uniqseq

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  INVESTIGATION_FINDINGS.md  PYPI_RELEASE_GUIDE.md  README.md  mkdocs.yml  pyproject.toml
.github/: renovate.json
.github/workflows/: python-version-check.yml  quality.yml  release.yml  test.yml  update-homebrew.yml
.run/: Python tests in docs.run.xml  Python tests in tests.run.xml  Python tests in uniqseq.run.xml
dev-docs/: README.md
dev-docs/deployment/: DEPLOYMENT.md
dev-docs/design/: ALGORITHM_DESIGN.md  IMPLEMENTATION.md
dev-docs/planning/: PLANNING.md  STAGE_3_DETAILED.md  STAGE_4_DETAILED.md  STAGE_5_DOCS.md
dev-docs/testing/: TESTING_STRATEGY.md  TEST_COVERAGE.md
dev-docs/user/: EXAMPLES.md
docs/: ALGORITHM_DESIGN.md  ALGORITHM_REDESIGN.md  FUTURE_FEATURES.md  IMPLEMENTATION.md  PLANNING.md  TEST_COVERAGE.md  conftest.py  index.md
docs/about/: algorithm.md  contributing.md  design-decisions.md
docs/design/: ALGORITHM_DESIGN.md  DESIGN_RATIONALE.md  IMPLEMENTATION.md
docs/examples/: advanced-scenarios.md  annotations.md  basic-deduplication.md  cli-usage.md  file-processing.md  inverse-mode.md  log-processing.md  pattern-filtering.md  terminal-examples.md  terminal-sessions.md
docs/examples/fixtures/: repeated.txt
docs/exercises/: ci-log-deduplication.md
docs/features/: skip-chars.md  window-size.md
docs/features/annotations/: annotations.md
docs/features/annotations/fixtures/: expected-annotate.txt
docs/features/byte-mode/: byte-mode.md
docs/features/delimiters/: delimiters.md
docs/features/delimiters/fixtures/: test-output.txt
docs/features/explain/fixtures/: explain.txt
docs/features/hash-transform/: hash-transform.md
docs/features/history/: history.md
docs/features/history/fixtures/: expected-limited.txt
docs/features/inverse/: inverse.md
docs/features/inverse/fixtures/: expected-inverse.txt  expected-normal.txt  input.txt
docs/features/library-dir/: library-dir.md
docs/features/library-dir/fixtures/: output.txt
docs/features/pattern-filtering/: pattern-filtering.md
docs/features/read-sequences/: read-sequences.md
docs/features/read-sequences/fixtures/: output.txt
docs/features/skip-chars/: skip-chars.md
docs/features/stats/: stats.md
docs/features/window-size/: window-size.md
docs/getting-started/: basic-concepts.md  installation.md  quick-start.md
docs/guides/: choosing-window-size.md  common-patterns.md  performance.md  troubleshooting.md
docs/planning/: PLANNING.md  STAGE_3_DETAILED.md  STAGE_4_DETAILED.md  STAGE_5_DOCS.md
docs/reference/: cli.md  deduplicator.md  library.md  uniqseq.md
docs/testing/: TESTING_STRATEGY.md  TEST_COVERAGE.md
docs/use-cases/app-logs/: stack-traces.md
docs/use-cases/binary-analysis/: memory-forensics.md  network-capture.md
docs/use-cases/build-logs/: compiler-warnings.md
docs/use-cases/ci-cd/fixtures/baseline-lib/metadata-20251125-225311-321750/: config.json
docs/use-cases/ci-cd/fixtures/test-lib/metadata-20251125-235105-825649/: config.json
docs/use-cases/ci-cd/fixtures/test-lib/metadata-20251125-235117-663314/: config.json
docs/use-cases/ci-logs/: index.md  multi-line-sequences.md
docs/use-cases/data-processing/: csv-deduplication.md  log-normalization.md
docs/use-cases/incident-response/: multi-system-correlation.md
docs/use-cases/incident-response/fixtures/prod-patterns/metadata-20251126-025849-447351/: config.json
docs/use-cases/incident-response/fixtures/prod-patterns/metadata-20251126-030228-523027/: config.json
docs/use-cases/incident-response/fixtures/prod-patterns/metadata-20251126-030316-790187/: config.json
docs/use-cases/incident-response/fixtures/production-patterns/metadata-20251126-005012-320807/: config.json
docs/use-cases/operations/: loki-preprocessing.md  template-extraction.md
docs/use-cases/production-monitoring/: error-pattern-analysis.md  long-running-jobs.md
docs/use-cases/production-monitoring/fixtures/: job-stats.json
docs/use-cases/quality-assurance/: bug-detection.md
docs/use-cases/terminal-sessions/: script-output.md
docs/user/: EXAMPLES.md
optimization/: OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_RESULTS.md  PHASE2_RESULTS.md  PHASE3_INVESTIGATION.md  README.md  analyze_candidates.py  analyze_hotspot.py
src/uniqseq/: __init__.py  cli.py  deduplicator.py  divergence.py  filtering.py  library.py  matching.py  uniqseq.py
tests/: TESTS.md  conftest.py  generate_fixtures.py  oracle.py  random_sequences.py  test_cli.py  test_cli_coverage.py  test_cli_library.py  test_cli_stats.py  test_comprehensive.py  test_coverage_gaps.py  test_deduplicator.py  test_deduplicator_coverage.py  test_deduplicator_edge_cases.py  test_docs_validation.py  test_edge_cases.py  test_explain.py  test_hashing.py  test_integration.py  test_invariants.py  test_library.py  test_library_eof.py  test_library_workflows.py  test_limit_enforcement.py  test_mkdocs_build.py  test_nontracked_interference.py  test_oracle.py  test_output_consistency.py  test_positional_fifo.py  test_precomputed.py  test_random_sequences.py  test_utils.py
tests/fixtures/: all_cases.json  edge_cases.json  handcrafted_cases.json  precomputed_cases.json  random_cases.json
