[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniqseq"
version = "0.1.0"
description = "Deduplicate repeated sequences of lines in text streams and files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jeffrey Urban"}
]
requires-python = ">=3.9"
keywords = [
    "deduplication",
    "sequence",
    "filter",
    "unix",
    "streaming",
    "text-processing",
    "dedupe",
    "lines",
    "patterns",
    "terminal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Topic :: System :: Logging",
    "Topic :: Terminals",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
uniqseq = "uniqseq.cli:app"

[project.urls]
Homepage = "https://github.com/JeffreyUrban/uniqseq"
Repository = "https://github.com/JeffreyUrban/uniqseq"
Issues = "https://github.com/JeffreyUrban/uniqseq/issues"

[tool.hatch.version]
path = "src/uniqseq/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/uniqseq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=uniqseq --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = []
