[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniqseq"
version = "0.1.0"
description = "Deduplicate repeated sequences of lines in text streams and files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jeffrey Urban"}
]
requires-python = ">=3.9"
keywords = [
    "deduplication",
    "sequence",
    "filter",
    "unix",
    "streaming",
    "text-processing",
    "dedupe",
    "lines",
    "patterns",
    "terminal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Topic :: System :: Logging",
    "Topic :: Terminals",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "sybil>=6.0.0",
    "pymdown-extensions>=10.0.0",
    "termynal>=0.12.0",
]

[project.scripts]
uniqseq = "uniqseq.cli:app"

[project.urls]
Homepage = "https://github.com/JeffreyUrban/uniqseq"
Repository = "https://github.com/JeffreyUrban/uniqseq"
Issues = "https://github.com/JeffreyUrban/uniqseq/issues"

[tool.hatch.version]
path = "src/uniqseq/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/uniqseq"]

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=uniqseq --cov-report=term-missing"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for multiple components",
    "property: Property-based tests (invariants)",
    "slow: Slow tests (skipped by default)",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Function calls in argument defaults (typer idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E741", "E501"]  # Allow short var names and long lines in tests
"tests/generate_fixtures.py" = ["E402"]  # Module imports after sys.path modification

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src/uniqseq"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
